--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 .max-width-wrapper {
-  margin: 2rem 0rem;
   padding: 0.3rem 2.3rem;
 }
 
@@ -18,10 +17,12 @@ strong {
   color: hsl(160deg, 100%, 30%);
 }
 
-main {
+.gray-borders {
   border-top: 10vh solid hsl(0deg, 0%, 40%);
-  border-bottom: 10vh solid hsl(0deg, 0%, 40%);
-  outline: 0.5rem solid hsl(0deg, 0%, 60%);
+}
+
+main {
+  margin: 2rem 0rem;
 }
 
 .indented-heading {}
@@ -29,5 +30,13 @@ main {
 .gray-fw {
   width: 100%;
   background: hsl(0deg, 0%, 60%);
-  height: .3rem;
+  height: .5rem;
+
+}
+
+.gray-fw.bottom {
+  height: 3rem;
+  border-bottom: 10vh solid hsl(0deg, 0%, 40%);
+  border-top: 0.5rem solid hsl(0deg, 0%, 60%);
+
 }
