--- a/style.css
+++ b/style.css
@@ -9,8 +9,15 @@ body {
   padding: 0;
 }
 
+/* Mobile */
+
 .max-width-wrapper {
   padding: 0.3rem 1.3rem;
+}
+
+.max-width-wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 strong {
@@ -18,7 +25,8 @@ strong {
 }
 
 .gray-borders {
-  border-top: 10vh solid hsl(0deg, 0%, 40%);
+  border-top: 5rem solid hsl(0deg, 0%, 40%);
+  border-bottom: 5rem solid hsl(0deg, 0%, 40%);
 }
 
 main {
@@ -40,7 +48,50 @@ main {
 
 .gray-fw.bottom {
   height: 3rem;
-  border-bottom: 10vh solid hsl(0deg, 0%, 40%);
+  border-bottom: 5rem solid hsl(0deg, 0%, 40%);
   border-top: 0.5rem solid hsl(0deg, 0%, 60%);
+
+}
+
+/* Tablet */
+
+@media (min-width: 768px) {
+
+  .indented-heading {
+    width: 60%;
+    margin-left: -40px;
+    text-align: center;
+  }
+}
+
+/* Desktop */
+
+@media (min-width: 1024px) {
+
+  .gray-borders {
+    border-right: 10rem solid hsl(0deg, 0%, 40%);
+    border-left: 10rem solid hsl(0deg, 0%, 40%);
+  }
+
+  .intro-chunk {
+    padding: 1rem 0rem;
+  }
+
+  .indented-heading {
+    width: 50%;
+    margin-left: -30px;
+    padding: 0.8rem;
+  }
+
+  div.max-width-wrapper {
+    padding-left: 10rem;
+  }
+
+  .borders-only {
+    max-width: 1100px;
+    border-top: 0.5rem solid hsl(0deg, 0%, 60%);
+    margin: 0 auto;
+  }
+
 
 }
